# rust-get-started

./: .gitignore  Cargo.toml  README.md
concurrency/: Cargo.toml
concurrency/src/: async_await.rs  channel.rs  lib.rs  lock.rs  main.rs  thread.rs  utils.rs
csv_challenge/: Cargo.toml
csv_challenge/output/: output.csv  test.csv
csv_challenge/src/: err.rs  lib.rs  main.rs  read.rs  write.rs
csv_challenge/tests/: integration_test.rs
essentials/: Cargo.toml
essentials/src/: closure.rs  collection.rs  enums.rs  error.rs  iterator.rs  main.rs  patterns.rs  regex.rs  string.rs  type_conversion.rs
macros/: Cargo.toml
macros/proc_macros/: Cargo.toml
macros/proc_macros/src/: lib.rs
macros/src/: macro_by_example.rs  main.rs  proc_macro_usage.rs
memory/: Cargo.toml
memory/src/: align.rs  main.rs  pointer.rs  reference_cycle.rs
modules/src/: info.rs  main.rs
modules/src/student/: mod.rs
modules/src/teacher/: mod.rs  teaching.rs
ownership/src/: copy_semantic.rs  nll.rs  smart_pointer.rs
src/: main.rs
src/enums/src/: main.rs
src/essentials/: Cargo.toml
src/essentials/src/: collection.rs  error.rs  main.rs  patterns.rs  string.rs  structs.rs
src/memory/: Cargo.toml
src/memory/src/: main.rs
src/modules/src/: lib.rs  main.rs
src/modules/src/student/: play.rs  study.rs
src/ownership/: Cargo.toml
src/ownership/src/: bind_scope.rs  lifetime.rs  main.rs  nll.rs  reference_borrow.rs  subtype_variance.rs
src/traits/src/: main.rs  trait_as_abstract_type.rs  trait_as_bound.rs  trait_as_interface.rs  trait_as_label.rs
src/utils/src/: lib.rs
tokio-my-redis/: Cargo.toml
tokio-my-redis/src/: bytes.rs  main.rs  mini_tokio.rs
tokio-my-redis/src/examples/: client.rs  client_hello_redis.rs  mod.rs  select.rs  select_loop.rs  select_return.rs  share_with_mutex.rs
traits/: Cargo.toml
traits/src/: trait_as_abstract_type.rs
utils/: Cargo.toml
utils/src/: lib.rs  trpl.rs
