[package]
name = "rust-get-started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "essentials",
    "memory",
    "modules",
    "ownership",
    "traits",
    "utils",
    "csv_challenge"
]

[dependencies]
