[package]
name = "rust-get-started"
version = "0.1.0"
edition = "2021"

# more sub crates
[workspace]
members = [
    "essentials",
    "memory",
    "modules",
    "ownership",
    "traits",
    "utils",
    "csv_challenge",
    "concurrency",
    'macros',
    'macros/proc_macros'
]
exclude = [
    "tokio-my-redis"
]

[dependencies]
