[package]
name = "tokio-my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

# run *.rs other than main.rs: "cargo run --example server"
[[example]]
name = "server"
path = "src/examples/share_with_mutex.rs"
# "cargo run --example client"
[[example]]
name = "client"
path = "src/examples/client.rs"
# "cargo run --example client2"
[[example]]
name = "client2"
path = "src/examples/hello_redis.rs"