[package]
name = "utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# copied from https://github.com/rust-lang/book/blob/main/packages/trpl/Cargo.toml
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
scraper = "0.20"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1"
