[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parses Rust code from a string into a data structure that we can perform operations on.
syn = { version = "2.0.48", features = ["full"] }
# turns syn data structures back into Rust code
quote = "1.0.35"
proc-macro2 = "1.0.76"

[lib]
# define procedural macro
proc-macro = true
